--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "consign": "^0.1.6",
     "express": "^4.16.3",
+    "mongoose": "^5.3.1",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0"
   }
